// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DonorCredit tests should render the UI snapshot correctly 1`] = `
<div
  className="css-11iieq6"
  id="donor-credit-Test ID"
>
  <hr
    className="css-1auw00o"
  />
  <h3
    className="chakra-heading css-1e3lsoz"
  >
    Test Heading
  </h3>
  <div
    className="css-1vbjidi"
    dangerouslySetInnerHTML={
      {
        "__html": "Test Description",
      }
    }
  />
</div>
`;

exports[`DonorCredit tests should render the UI snapshot correctly 2`] = `
<div
  className="css-11iieq6"
  id="donor-credit-Test ID"
>
  <h3
    className="chakra-heading css-1e3lsoz"
  >
    Test Heading
  </h3>
  <div
    className="css-1vbjidi"
    dangerouslySetInnerHTML={
      {
        "__html": "Test Description",
      }
    }
  />
</div>
`;

exports[`DonorCredit tests should render the UI snapshot correctly 3`] = `
<div
  className="css-11iieq6"
  id="donor-credit-Test ID"
>
  <div
    className="css-1vbjidi"
    dangerouslySetInnerHTML={
      {
        "__html": "Test Description",
      }
    }
  />
</div>
`;
